fixed bug with right sidebar on mobile

--- a/src/stylus/components/_menus.styl
+++ b/src/stylus/components/_menus.styl
@@ -23,28 +23,26 @@
     @extend .z-depth-2
     
   &-transition
-    &-enter
-      
+    &-enter      
       .list__tile
         min-width: 0
-        transition-delay: .1s
+        transition-delay: .3s
         opacity: 0
         transform: translateY(-15px)
         pointer-events: none
         
       .list__tile--active
-        opacity: 1 !important
-        transform: translateY(0) !important
+        opacity: 1
+        transform: none
         pointer-events: auto
       
     &-enter-to
-        
       .list__tile
         pointer-events: auto
         opacity: 1
       
       .list__tile--active
-        opacity: 1 !important
+        transform: none
       
     &-leave-to
       transform: translateY(-10px)
@@ -56,4 +54,4 @@
       opacity: 1
       
     &-enter-active, &-leave-active
-      transition: all .3s $transition.ease-in-out
+      transition: all .4s $transition.swing
